--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="VYC SAFE WORK - Administración de Edificios y Seguridad. Ofrecemos una amplia gama de servicios generales para satisfacer todas sus necesidades de mantenimiento y reparación. Servicios de seguridad en edificios, mantenimiento de edificios, reparación de edificios, administración de propiedades y más.">
+    <meta name="keywords" content="seguridad en edificios, mantenimiento de edificios, reparación de edificios, administración de propiedades, servicios de mantenimiento, seguridad laboral, gestión de instalaciones, servicios de limpieza, mantenimiento preventivo, inspección de edificios">
     <title>V&Csafework</title>
   </head>
   <body>
