--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/ICIFNIAL-b6c457ad.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="V&C SAFE WORK S.A.C">
-    <meta name="description" content="Empresa peruana especializada en la administración integral de edificios, condominios y vigilancia preventiva. Para brindar servicios de conserjes, porteros, recepcionistas, controladores, auxiliares de limpieza, vigilancia, resguardo policial y protección personal; contamos con personal capacitado, entrenado y calificado para prestar nuestros servicios de calidad">
-    <meta name="keywords" content="seguridad en edificios, mantenimiento de edificios, reparación de edificios, administración de propiedades, servicios de mantenimiento, seguridad laboral, gestión de instalaciones, servicios de limpieza, mantenimiento preventivo, inspección de edificios">
-
-    <title>V&C SAFE WORK S.A.C - Administración de Edificios y seguridad</title>
+    <meta name="description" content=" Empresa de Administración de Edificios y seguridad.">
+    <title>V&C SAFE WORK S.A.C</title>
   </head>
   <body>
     <div id="root"></div>
