--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/ICIFNIAL-b6c457ad.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content=" Empresa de Administración de Edificios y seguridad.">
+    <meta name="description" content=" Empresa de Administración de Edificios y Seguridad.">
     <title>V&C SAFE WORK S.A.C</title>
   </head>
   <body>
